# opencv_qt

./: CMakeLists.txt  README.md  build.cmake.sh
minimal/: CMakeLists.txt  main.cc  window.cc  window.h
opencv/: CMakeLists.txt
opencv/webcam/: webcam.cc
webcam/: CMakeLists.txt  main.cc  webcam.cc  webcam.h
